#68 Unuse java 8+ features